--- a/src/assets/sass/dna/dna__nucleobase.sass
+++ b/src/assets/sass/dna/dna__nucleobase.sass
@@ -193,7 +193,7 @@
   -webkit-animation-delay: -18.69s
   animation-delay: -18.69s
   background-color: $blue
-  
+
 @-webkit-keyframes animBefore
   0% 
   top: -5rem
@@ -314,3 +314,125 @@
     opacity: 1
     -webkit-transform: translateY(0em)
     transform: translateY(0em)
+
+@media screen and (max-width: 975px)
+  @-webkit-keyframes animBefore
+    0% 
+    top: -3rem
+    z-index: 1
+    25% 
+    -webkit-transform: scale(1.2)
+    transform: scale(1.2)
+    z-index: 1
+    50% 
+    top: 3rem
+    z-index: -1
+    75% 
+    background-color: $black
+    -webkit-transform: scale(0.8)
+    transform: scale(0.8)
+    z-index: -1
+    100% 
+    top: -3rem
+    z-index: -1
+  @keyframes animBefore
+    0%
+      top: -3rem
+      z-index: 1
+    25%
+      -webkit-transform: scale(1.2)
+      transform: scale(1.2)
+      z-index: 1
+    50%
+      top: 3rem
+      z-index: -1
+    75%
+      background-color: $black
+      -webkit-transform: scale(0.8)
+      transform: scale(0.8)
+      z-index: -1
+    100%
+      top: -3rem
+      z-index: -1
+  @-webkit-keyframes animAfter
+    0% 
+    top: 3rem
+    z-index: -1
+    25% 
+    background-color: $blue
+    -webkit-transform: scale(0.8)
+    transform: scale(0.8)
+    z-index: -1
+    50% 
+    top: -3rem
+    z-index: 1
+    75% 
+    -webkit-transform: scale(1.2)
+    transform: scale(1.2)
+    z-index: 1
+    100% 
+    top: 3rem
+    z-index: 1
+  @keyframes animAfter
+    0%
+      top: 3rem
+      z-index: -1
+    25%
+      background-color: $blue
+      -webkit-transform: scale(0.8)
+      transform: scale(0.8)
+      z-index: -1
+    50%
+      top: -3rem
+      z-index: 1
+    75%
+      -webkit-transform: scale(1.2)
+      transform: scale(1.2)
+      z-index: 1
+    100%
+      top: 3rem
+      z-index: 1
+  @-webkit-keyframes animDotBar
+    0% 
+    height: 8.25vh
+    25% 
+    height: 0
+    50% 
+    height: 8.25vh
+    75% 
+    height: 0
+    100% 
+    height: 8.25vh
+  @keyframes animDotBar
+    0%
+      height: 1.25vh
+    25%
+      height: 0
+    50%
+      height: 1.25vh
+    75%
+      height: 0
+    100%
+      height: 1.25vh
+
+  @-webkit-keyframes superscript
+    0% 
+    opacity: 0
+    -webkit-transform: translateY(-1em)
+    transform: translateY(-1em)
+
+    100% 
+    opacity: 1
+    -webkit-transform: translateY(0em)
+    transform: translateY(0em)
+
+  @keyframes superscript
+    0%
+      opacity: 0
+      -webkit-transform: translateY(-1em)
+      transform: translateY(-1em)
+
+    100%
+      opacity: 1
+      -webkit-transform: translateY(0em)
+      transform: translateY(0em)
